# prolog_kernel

./: README.md  install.sh  manual_prolog  pyproject.toml  query_engine
prolog_kernel/: __init__.py  __main__.py  install.py  kernel.py  prolog.py
src/: __main__.py  kernel.py  prolog.py
tests/: tests.py
