[tool.poetry]
name = "prolog-kernel"
version = "0.1.0"
description = ""
authors = ["Jason Qin <capitalswine@gmail.com>"]
readme = "README.md"
packages = [{include = "prolog_kernel"}]

[tool.poetry.dependencies]
python = "^3.11"
pyswip = "^0.2.10"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
